Fixed spacing between logotext and menuitems on landscape tablet/desktop

--- a/portfolio.css
+++ b/portfolio.css
@@ -132,7 +132,7 @@ ul {
 	top: 0;
 	width: 100%;
 	display: flex;
-	transition: top 0.3s;
+	/* transition: top 0.3s; */
 	justify-content: center;
 	align-items: center;
 	/* height: 10%; */
@@ -157,7 +157,8 @@ body {
 /* Navigation menu bar at the top of the screen */
 #navmenu {
 	display:flex;
-	flex-direction: column;
+	flex-direction: row;
+	flex-wrap:wrap;
 	font-size: 1.5rem;
 	line-height: 1em;
 	padding: 0;
@@ -178,21 +179,31 @@ body {
 	text-align: right;
 }
 
-.logotext {
-	margin-right: auto;
-	font-size: 1em;
-}
-
 .menuitems {
 	/* display: none; */
 	padding: 0.5%;
 	order: 2;
+	line-height: 2em;
+	/* width: 100%; */
+	flex-basis:100%;
+	/* box-sizing: border-box;  */
+}
+
+.logotext {
+	/* margin-right: auto; */
+	font-size: 1em;
+	line-height: 1em;
+	/* width: 50%; */
+	flex-basis: 48%;
 }
 
 .menutoggle {
-	margin-left: auto;
+	/* margin-left: auto; */
 	order: 1;
 	font-size: 1.25em;
+	line-height: 1em;
+	/* width: 47.5%; */
+	flex-basis: 48%;
 }
 
 /* Indicates the current page the user has accessed. */
@@ -238,12 +249,17 @@ body {
 	#main > div:nth-of-type(odd) {flex-grow: 0.5;}
 	#main > div:nth-of-type(even) {flex-grow: 1;}
 
+	#header {
+		height: 12.5%;
+	}
+
 	#header > div:nth-of-type(odd) {flex-grow: 0.5;}
 	#header > div:nth-of-type(even) {flex-grow: 0.8;}
 
 	#navmenu {
 		display:flex;
 		flex-direction: row;
+		flex-wrap: nowrap;
 		font-size: 1.5rem;
 		line-height: 1em;
 		padding:0;
@@ -254,15 +270,17 @@ body {
 		padding-top: 12.5vh;
 	}
 
-	.logotext {
-		font-size: 1.25em;
-	}
 	.menuitems {
 		display: inline-block;
+		flex-basis: unset;
+		line-height: 1em;
 	}
 
-	#header {
-		height: 12.5%;
+	.logotext {
+		margin-right: auto;
+		font-size: 1.25em;
+		line-height: 1em;
+		flex-basis: unset;
 	}
 
 	.menutoggle {
@@ -284,8 +302,9 @@ body {
 	#header > div:nth-of-type(even) {flex-grow: 0.8;}
 
 	#navmenu {
-		display:flex;
+		display: flex;
 		flex-direction: row;
+		flex-wrap: nowrap;
 		font-size: 1.5rem;
 		line-height: 1em;
 		padding:0;
@@ -296,12 +315,15 @@ body {
 		padding-top: 9vh;
 	}
 
-	.logotext {
-		font-size: 1.5em;
-	}
-
 	.menuitems {
 		display: inline-block;
+		flex-basis: unset;
+	}
+
+	.logotext {
+		margin-right: auto;
+		font-size: 1.5em;
+		flex-basis: unset;
 	}
 
 	.menutoggle {
